URL with jquery params & map marker

--- a/cover.html
+++ b/cover.html
@@ -33,28 +33,28 @@
             </section>
 
             <section class="content">
-              <div class="bar">
+              <form class="bar" method = "get" action="search-result.html">
                   <div class="innerbox">
-                    <select class="operation" id="operationId">
-                            <option value="venta">Venta</option>
-                            <option value="alquiler">Alquiler</option>
-                            <option value="alquilerTemporal">Alquiler Temporal</option>
+                    <select class="operation" name="operationType" id="operationId">
+                            <option value="Sale">Venta</option>
+                            <option value="Rent">Alquiler</option>
+                            <option value="Temporary">Alquiler Temporal</option>
                     </select>
 
-                    <select class="property" id="typeId">
-                            <option value="casas">Casas</option>
-                            <option value="aprtamentos">Apartamentos</option>
-                            <option value="terrenos">Terrenos</option>
+                    <select class="property" name="propertyType" id="typeId">
+                            <option value="House">Casas</option>
+                            <option value="Apartment">Apartamentos</option>
+                            <option value="Land">Terrenos</option>
                             <option value="locales">Locales Comerciales</option>
                             <option value="oficinas">Oficinas</option>
                     </select>
                   </div>
 
-                  <input class="ubication" id="zoneId" type="text" name="ubication" placeholder="Ubicacion ej: Pocitos, Montevideo"/>
+                  <input class="ubication" id="zoneId" type="text" name="zoneId" placeholder="Ubicacion ej: Pocitos, Montevideo"/>
 
                   <button class="btn" id="buscar">Buscar</button>
 
-              </div>
+              </form>
             </section>
         </article>
 
@@ -76,6 +76,5 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
         <script src="js/coverdynamicload.js"></script>
-        <script src="js/searchresultdynamicload.js"></script>
     </body>
 </html>
