--- a/search-result.html
+++ b/search-result.html
@@ -67,12 +67,9 @@
      <script src="https://code.jquery.com/jquery-3.3.1.min.js"
      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
      crossorigin="anonymous"></script>
-<<<<<<< HEAD
-     <script> src="js/dynamicresults.js"</script>
-=======
+     <!-- <script> src="js/dynamicresults.js"</script>  -->
      <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
      <script src="js/searchresultdynamicload.js"></script>
->>>>>>> 7a354573b6bd5e2a98918eeaca9f35a08817d9ad
 
 
 
