--- a/slides.html
+++ b/slides.html
@@ -11,6 +11,6 @@
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 
-  <script src="js/slidesdynamic.js"></script> 
+  <script src="js/slidesdynamicEsteNO.js"></script> 
 </body>
 </html>
