--- a/cover.html
+++ b/cover.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Cabildo 500</title>
+        
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="CSS/reset.css">
         <link rel="stylesheet" href="CSS/headerstyle.css">
         <link rel="stylesheet" type="text/css" href="CSS/coverStyle.css">
