--- a/search-result.html
+++ b/search-result.html
@@ -1,7 +1,8 @@
  <!DOCTYPE html>
  <html lang="en" dir="ltr">
    <head>
-     
+
+     <script async defer src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyDVO_2-isgrpfX5mghSepnsf0Olz70JV7s&callback=mapInput" ></script>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <meta charset="utf-8">
      <title>Search Result</title>
@@ -35,31 +36,9 @@
 
      <div class="container">
 
-       <article id="resultbox" class="resultsbox">
-        <!--
-         <section class="result">
-           <div class="imgbox">
-             <img src="img/img.jpg" alt="img1">
-           </div>
-           <div class="description">
-             <h3 class="propertyType">ENTIRE APARTMENT</h3>
-             <h2 class="address">1 Direccion ficticia, 345.</h2>
-             <p class="details">Luminoso, cantidad de dormitorios, cosas, cosas.</p>
-           </div>
-         </section> -->
+       <article id="resultbox" class="resultsbox"></article>
 
-       </article>
-
-       <div class="mapbox" id="map"></div>
-
-       <!-- <aside class="mapbox" id="map">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209626.35836321
-          392!2d-56.37652363555179!3d-34.82073615640862!2m3!1f0!2f0!3f0!3m2!1i1024!2
-          i768!4f13.1!3m3!1m2!1s0x959f80ffc63bf7d3%3A0x6b321b2e355bec99!2sMontevideo
-          %2C+Uruguay!5e0!3m2!1ses!2sus!4v1533150943717"
-          frameborder="0" style="border:0" allowfullscreen></iframe>
-       </aside> -->
-     </div>
+       <div class="mapbox" id="map"></div></div>
 
      <footer id="footer">
      </footer>
@@ -69,8 +48,6 @@
      <script src="https://code.jquery.com/jquery-3.3.1.min.js"
      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
      crossorigin="anonymous"></script>
-     <!-- <script> src="js/dynamicresults.js"</script>  -->
-     <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
      <script src="js/searchresultdynamicload.js"></script>
 
 
