responsive cover + style details + dynamic history

--- a/cover.html
+++ b/cover.html
@@ -28,7 +28,7 @@
             </nav>
         </header>
 
-        <article class="box">
+        <div class="box">
 
             <section class="slogan">
                 <h1>Alquiler y venta de apartamentos y casas en Uruguay</h1>
@@ -58,7 +58,7 @@
 
               </form>
             </section>
-        </article>
+        </div>
 
         <section class="recommendationbox">
           <header class="recommendationHeader">
