--- a/post.html
+++ b/post.html
@@ -54,15 +54,15 @@
                 </ul>
             </nav>
         </div>
-
+        
         <div  class="box">
 
           <div class="imgbox" id="slider">
             <a href="#" class="control_next">></a>
             <a href="#" class="control_prev"><</a>
             <ul id="sliderImg">
-                <li id=logocabildo> <img src="../img/logo.png" alt="logo" ></li> <!--si no hay dos, no funciona la carga dinamica-->
-                <li> <img src="../img/logo.png" alt="logo"></li>
+                <li id=logocabildo> <img src="img/publicidad-01.png" alt="publicidad" ></li> <!--si no hay dos, no funciona la carga dinamica-->
+                <li> <img src="img/logo.png" alt="logo"></li>
             </ul>
           </div> <!--imgbox-->
 
