--- a/search-result.html
+++ b/search-result.html
@@ -33,6 +33,12 @@
      <nav class="browserbox">
         <input class="browser" name="browser" type="text" placeholder="e.i New York City"/>
      </nav>
+     
+     <div class="innerHeader" id="innerHeader">
+      <span id="propertyType"></span><span> ></span>
+      <span id="operationType"></span><span> ></span>
+      <span id="zoneId"></span>
+     </div>
 
      <div class="container">
 
